# chump

./: .editorconfig  .gitignore  AGENTS.md  CONFIGURATION.md  LICENSE  README.md  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  cli-loaded-resources-context.md  early-daemon-testing.md  fast-server-runtime-archives.md  first-public-packaging.md  fuzzy-codex-reasoning.md  gold-areas-dig.md  green-badgers-steer.md  legacy-server-binary-fallback.md  live-reasoning-preview.md  lucky-chump-git-actions.md  nervous-pens-thank.md  new-stuff.md  patient-server-version-probe.md  quiet-daemon-binary-start.md  session-management-tools.md  soft-hounds-reflect.md  tame-eagles-cheer.md  (+3 more)
server/: CHANGELOG.md  README.md  pyproject.toml
server/chump_server/: __init__.py  agent.py  codex_provider.py  config.py  events.py  git_utils.py  main.py  managed_idle.py  mcp_config.py  mcp_runtime.py  patch_tool.py  process_title.py  resources.py  safety.py  search.py  system_prompt.py  tools.py
server/chump_server/providers/: codex.py  github_copilot.py  google.py  openai_compatible.py  xai.py
server/chump_server/runtime/: __init__.py  compaction.py  messages.py  model.py  usage.py
server/chump_server/server/: __init__.py  connections.py  sessions.py
server/chump_server/tools/: __init__.py  _mcp_exa.py  _utils.py  apply_patch.py  bash.py  builder.py  mcp.py  read_file.py  search.py  sessions.py  skill.py  view_image.py  web_fetch.py  website.py  write_file.py
server/scripts/: build_binary.py  extract_release_notes.py
server/tests/: test_agent_lifecycle.py  test_codex_provider.py  test_compaction.py  test_config.py  test_events.py  test_faux_agent_harness.py  test_google_provider.py  test_main.py  test_mcp.py  test_resources.py  test_session_tools.py  test_sessions.py  test_system_prompt.py  test_tools.py
(+237 files in other folders)
