[project]
name = "chump-server"
dynamic = ["version"]
description = "Python backend for the chump coding assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-query==1.7.35",
]
keywords = ["ai", "agent", "cli", "backend", "chump"]

[project.scripts]
chump-server = "chump_server.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^chump-server-v(?P<version>.*)$"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
search_parent_directories = true
git_describe_command = [
    "git",
    "describe",
    "--tags",
    "--long",
    "--match",
    "chump-server-v*",
]

[dependency-groups]
dev = []

[tool.uv.sources]
ai-query = { path = "../ai-query", editable = true }
